# sos_art

./: .gitignore  LICENSE  README.md  plot_sos_heatmap.py  pyproject.toml  sos_heatmap_main.py  triptych_dyn_art.py  triptych_dyn_art_funcs.py  triptych_sos_main.py
scripts/: ss2tf_example.py  triptych_sos_main.py
src/: triptych_dyn_art_funcs.py
